First Steps and about files rectified